# libglKH

./: CMakeLists.txt  README.md
add/: key_handler_add.c
callbacks/: key_callback.c
handle/: handle.h  handle_functions.c  key_handle.c
includes/: lgkh.h  libglKH.h  libglKH_global_structs.h  libglKH_global_variables.h
init/: key_handler_init.c
